# granolabrdge

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
launchd/: com.granola-bridge.daemon.plist
scripts/: install.sh  start-granola-bridge.command  uninstall.sh
scripts/GranolaBridge.app/Contents/: Info.plist
scripts/GranolaBridge.app/Contents/MacOS/: GranolaBridge
src/granola_bridge/: __init__.py  config.py  main.py
src/granola_bridge/core/: __init__.py  daemon.py  notifier.py  scheduler.py  watcher.py
src/granola_bridge/models/: __init__.py  action_item.py  database.py  meeting.py  retry_queue.py  transcript_segment.py
src/granola_bridge/services/: action_extractor.py  embedding_service.py  granola_parser.py  llm_client.py  trello_client.py  trello_helpers.py
src/granola_bridge/web/: __init__.py  app.py  templates_helper.py
src/granola_bridge/web/routes/: __init__.py  dashboard.py  meetings.py  retry_queue.py  search.py  upload.py
src/granola_bridge/web/templates/: base.html  dashboard.html  error.html  meeting_detail.html  meetings.html  retry_queue.html  search.html  upload.html
src/granola_bridge/web/templates/partials/: action_item_row.html
tests/: __init__.py  conftest.py  test_action_extractor.py  test_granola_parser.py  test_models.py
